--- a/online_collaboration/app/components/authentication/login.html
+++ b/online_collaboration/app/components/authentication/login.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="background-image: url(assets/img/collaboration3.png);">
     <div class="col s7 m4 offset-m4 offset-s3">
         <div class="card grey lighten-3">
             <div class="card-content grey-text text-darken-1 hoverable">
