--- a/online_collaboration/app/components/blog/createBlog.html
+++ b/online_collaboration/app/components/blog/createBlog.html
@@ -4,9 +4,9 @@
     <div class="row">
         <div class="col s7 m6 offset-m3 offset-s3">
             <div class="card yellow darken-1">
-                <div class="card-content purple-text text-darken-4 hoverable">
+                <div class="card-content teal-text text-darken-4 hoverable">
                     <div align="center">
-                        <span class="card-title purple-text text-darken-4">Blog</span>
+                        <span class="card-title teal-text text-darken-4">Blog</span>
                     </div>
                     <form ng-submit="blogCtrl.submit()">
                         <div class="row">
@@ -24,7 +24,7 @@
                             </div>
                         </div>
                         <div align="center">
-                            <button class="waves-effect waves-light purple darken-4 orange-text text-darken-1 hoverable" type="submit">Create Blog</button>
+                            <button class="waves-effect waves-light teal darken-4 orange-text text-darken-1 hoverable" type="submit">Create Blog</button>
                         </div>
                     </form>
                 </div>
