--- a/online_collaboration/app/components/forum/createForum.html
+++ b/online_collaboration/app/components/forum/createForum.html
@@ -1,7 +1,9 @@
-<div class="row">
+<div class="row left-padding">
+    <div class="row"> <img src="assets/img/forum.png" class="img-square image" alt="Cinque Terre" width="100" height="100">
+    </div>
     <div class="col s7 m6 offset-m3 offset-s3">
-        <div class="card teal darken-1">
-            <div class="card-content black-text">
+        <div class="card blue lighten-2 hoverable">
+            <div class="card-content blue-text text-darken-3">
                 <span class="card-title">Forum</span>
                 <form ng-submit="forumCtrl.submit()">
                     <div class="row">
@@ -13,7 +15,7 @@
                     </div>
                     <div class="row">
                         <div align="center">
-                            <button class="waves-effect waves-light teal lighten-3" type="submit">Create Forum</button>
+                            <button class="waves-effect waves-light blue darken-3" type="submit">Create Forum</button>
                         </div>
                     </div>
                 </form>
