--- a/online_collaboration/app/components/forum/singleForum.html
+++ b/online_collaboration/app/components/forum/singleForum.html
@@ -3,7 +3,7 @@
         <div class="col s10 m10 offset-m1 offset-s1">
             <div class="card teal darken-1">
                 <div class="card-content">
-                    <span class="card-title orange-text text-accent-2 center-align">{{forumCommentCtrl.singleForum.forum.name}}</span>
+                    <span class="card-title orange-text text-accent-2 center-align latest">{{forumCommentCtrl.singleForum.forum.name}}</span>
                     <a ng-href="#!/forum/requests/{{forumCommentCtrl.singleForum.forum.forumId}}" class="pull-right" ng-if="user.userId == forumCommentCtrl.singleForum.forum.userId"><i class="material-icons f-icon">accessibility</i></a>
                     <a ng-href="#!/forum/members/{{forumCommentCtrl.singleForum.forum.forumId}}" class="pull-right"><i class="material-icons f-icon">supervisor_account</i></a>
                 </div>
@@ -12,8 +12,8 @@
     </div>
     <div class="container">
         <div class="row" ng-repeat="f in forumCommentCtrl.singleForum.forum.forumComment |orderBy : 'commentDate'">
-            <p><b><span class="orange-text text-accent-2">{{f.username}}</span></b><span class="pull-right">{{f.commentDate | date : 'h:mm a, MMM d, y '}}</span></p>
-            <p>{{f.comment}}</p><br>
+            <p><b><span class="orange-text text-accent-2 latest">{{f.username}}</span></b><span class="pull-right latest">{{f.commentDate | date : 'h:mm a, MMM d, y '}}</span></p>
+            <p><span class="latest">{{f.comment}}</span></p><br>
             <hr>
         </div>
     </div>
