--- a/online_collaboration/app/components/forum/viewForum.html
+++ b/online_collaboration/app/components/forum/viewForum.html
@@ -8,7 +8,10 @@
                     <div class="row">
                         <div class="col s12 m8">
                             <div class="row">
-                                <div class="blog-title">
+                                <div class="blog-title" ng-if="forum.forumRequest == null">
+                                    <span class="card-title blue-text text-darken-3">{{forum.forum.name}}</span><br>
+                                </div>
+                                <div class="blog-title" ng-if="forum.forumRequest != null">
                                     <a ng-href="#!/viewForum/{{forum.forum.forumId}}"><span class="card-title blue-text text-darken-3">{{forum.forum.name}}</span></a><br>
                                 </div>
                             </div>
