--- a/online_collaboration/app/components/user/editProfile.html
+++ b/online_collaboration/app/components/user/editProfile.html
@@ -5,7 +5,7 @@
                 <div class="card-content grey-text text-darken-1">
                     <div class="row">
                         <div align="center">
-                            <span class="blue-grey-text text-darken-2">Edit Profile</span>
+                            <span class="latest blue-grey-text text-darken-2">Edit Profile</span>
                         </div>
                     </div>
                     <div class="row">
@@ -25,7 +25,9 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="btn grey waves-effect waves-light" ng-click="userCtrl.uploadFile()">Change Picture</button>
+                        <div class="col s4 offset-s4">
+                        <button class="btn blue-grey lighten-4 blue-grey-text text-darken-2 hoverable waves-effect waves-light" ng-click="userCtrl.uploadFile()">Change Picture</button>
+                        </div>
                     </div>
                     <form name="userForm" ng-submit="userCtrl.submit()" novalidate>
                         <div class="row">
@@ -49,7 +51,7 @@
                                     required>
                                 <p ng-show="userForm.firstName.$error.minlength" class="help-block red-text text-accent-4">*First name is too short.</p>
                                 <p ng-show="userForm.firstName.$error.maxlength" class="help-block red-text text-accent-4">*First name is too long.</p>
-                                <p ng-show="!userForm.firstName.$pristine" class="help-block red-text text-accent-4">*Name is required.</p>
+                                <p ng-show="userForm.firstName.$invalid && !userForm.firstName.$pristine" class="help-block red-text text-accent-4">*Name is required.</p>
                                 <label for="firstName">First Name</label>
                             </div>
                             <div class="input-field col s6">
@@ -58,7 +60,7 @@
                                     required>
                                 <p ng-show="userForm.lastName.$error.minlength" class="help-block red-text text-accent-4">*Last name is too short.</p>
                                 <p ng-show="userForm.lastName.$error.maxlength" class="help-block red-text text-accent-4">*Last name is too long.</p>
-                                <p ng-show="!userForm.lastName.$pristine" class="help-block red-text text-accent-4">*Name is required.</p>
+                                <p ng-show="userForm.lastName.$invalid && !userForm.lastName.$pristine" class="help-block red-text text-accent-4">*Name is required.</p>
                                 <label for="lastName">Last Name</label>
                             </div>
                         </div>
@@ -82,14 +84,14 @@
                                 />
                                 <p ng-show="userForm.password.$error.minlength" class="help-block red-text text-accent-4">*Password is too short.</p>
                                 <p ng-show="userForm.password.$error.maxlength" class="help-block red-text text-accent-4">*Password is too long.</p>
-                                <p ng-show="!userForm.password.$pristine" class="help-block red-text text-accent-4">*Password is required.</p>
+                                <p ng-show="userForm.password.$invalid && !userForm.password.$pristine" class="help-block red-text text-accent-4">*Password is required.</p>
                                 <label for="password">Password</label>
                             </div>
                             <div class="input-field col s6">
                                 <i class="material-icons prefix">lock_outline</i>
                                 <input id="confirmPassword" type="password" class="validate" name="confirmPassword" ng-model="userCtrl.client.confirmPassword"
                                     ng-required>
-                                <p ng-show="!userForm.confirmPassword.$pristine" class="help-block red-text text-accent-4">*Re-Password is required.</p>
+                                <p ng-show="userForm.confirmPassword.$invalid && !userForm.confirmPassword.$pristine" class="help-block red-text text-accent-4">*Re-Password is required.</p>
                                 <label for="confirmPassword">Re-Password</label>
                             </div>
                         </div>
