--- a/online_collaboration/app/components/user/viewMember.html
+++ b/online_collaboration/app/components/user/viewMember.html
@@ -6,7 +6,7 @@
             <div class="card-panel blue lighten-2 hoverable">
                 <div class="row valign-wrapper">
                     <div class="col s1">
-                        <img src="assets/img/male.png" alt="Profile image" class="circle responsive-img">
+                        <img src="assets/img/{{member.profileId}}" alt="Profile image" class="img-circle materialboxed u-image" height="50" width="50">
                         <!-- notice the "circle" class -->
                     </div>
                     <div class="col s7">
@@ -14,9 +14,6 @@
                         <span class="blue-text text-darken-3" ng-if="user.username != member.username"><b>{{member.username}}</b></span><br>
                         <span class="blue-text text-darken-3">Name: {{member.firstName}} {{member.lastName}}</span>
                         <span class="blue-text text-darken-3">Role: {{member.role}}</span>
-                    </div>
-                    <div class="col s4">
-                        <button class="waves-effect blue darken-3 waves-light pull-right hoverable" ng-if="user.username != member.username"><i class="material-icons">touch_app</i> Add Friend</button>
                     </div>
                 </div>
             </div>
